--- a/stack.yaml
+++ b/stack.yaml
@@ -4,7 +4,7 @@ provider:
   gateway: http://127.0.0.1:8080
 functions:
   facesdetection-python:
-    lang: python3-http
+    lang: python3-flask-debian
     handler: ./facesdetection-python
-    image: facesdetection-python:latest
+    image: martinezmario/facesdetection-python:latest
 
